Fixed letterbox triangle problem, should verify if a-tag overflow css property has the right behaviour in same context

--- a/bottlecap/layouts/popper/static/css/main.less
+++ b/bottlecap/layouts/popper/static/css/main.less
@@ -417,6 +417,7 @@ th a.selected {
     }
     a {
         .ir();
+        overflow: visible;
         width: 26px;
         height: 26px;
         background-color: transparent;
